# originbot

./: CHANGELOG.md  README.en.md  README.md  install_prereq.sh  install_prereq_fullimg.sh
mipi_cam/: CMakeLists.txt
mipi_cam/launch/: camera.launch.py  camera_websocket.launch.py  mipi_cam.launch.py  mipi_cam_sc132gs.launch.py
mipi_cam/src/: mipi_cam.cpp  mipi_cam_node.cpp  mipi_cap.cpp
mipi_cam/src/x3/: sensor_sc132gs_config.c  x3_utils.c
originbot_audio/audio_control/src/: main.cpp
originbot_audio/audio_tracking/: CMakeLists.txt  README.md  package.xml
originbot_audio/audio_tracking/include/: audio_common.h  audio_tracking_engine.h  audio_tracking_node.h
originbot_audio/audio_tracking/launch/: hobot_audio_tracking.launch.py
originbot_base/: CMakeLists.txt  package.xml
originbot_base/include/: originbot_base.h
originbot_base/launch/: robot.launch.py
originbot_base/src/: originbot_base.cpp  serial_test.cpp
originbot_body_tracking/: CMakeLists.txt  README.md  package.xml
originbot_body_tracking/include/: common.h
originbot_body_tracking/launch/: originbot_body_tracking.launch.py  originbot_body_tracking_without_gesture.launch.py
originbot_bringup/: CMakeLists.txt  package.xml
originbot_bringup/launch/: camera.launch.py  camera_internal.launch.py  camera_websoket_display.launch.py  joy_teleop.launch.py  originbot.launch.py  originbot_lidar.launch.py  usb_websoket_display.launch.py  vp100.launch.py  ydlidar.launch.py  ydlidar.py
originbot_bringup/param/: ydlidar.yaml
originbot_bringup/src/: originbot_driver.cpp
originbot_deeplearning/body_tracking/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
originbot_deeplearning/gesture_control/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
originbot_deeplearning/line_follower_model/: setup.py
originbot_deeplearning/line_follower_perception/: CMakeLists.txt  package.xml
originbot_deeplearning/parking_search/: CHANGELOG.md  README.md  package.xml
originbot_deeplearning/play_football/: CMakeLists.txt  package.xml
originbot_demo/: package.xml  setup.py
originbot_demo/originbot_demo/: control_buzzer.py  control_led.py  draw_circle.py  echo_odom.py  take_pictures.py  transport_img.py
originbot_description/: package.xml  setup.cfg  setup.py
originbot_description/launch/: display.launch.py
originbot_driver/kruisee_lidar/: CMakeLists.txt  LICENSE  package.xml
originbot_driver/kruisee_lidar/doc/: README.md
originbot_driver/kruisee_lidar/launch/: kruisee_lidar.launch.py  kruisee_lidar.xml  kruisee_lidar.yaml
originbot_driver/kruisee_lidar/sdk_core/: CMakeLists.txt  sdkcore.cc
originbot_driver/kruisee_lidar/sdk_core/common/: configurator.cc  loader.cc  scripts.cc
originbot_driver/kruisee_lidar/sdk_core/config/: filters.lua  kruisee_lidar.lua  kruisee_lidar.rviz  lidar.lua  pose.lua  protocol.lua
originbot_driver/kruisee_lidar/sdk_core/drivers/: ethernet_unix.cc  ethernet_win.cc  lidar.cc  protocol.cc  uart_unix.cc  uart_win.cc
originbot_driver/kruisee_lidar/sdk_core/filters/: outlierfilter.cc  search.cc  search.h  smoother.cc  trailingfilter.cc
originbot_driver/kruisee_lidar/sdk_core/include/: sdkcore.h
originbot_driver/kruisee_lidar/sdk_core/include/common/: configurator.h  loader.h  scripts.h
originbot_driver/kruisee_lidar/sdk_core/include/drivers/: ethernet.h  iworker.h  lidar.h  msg.h  protocol.h  uart.h
originbot_driver/kruisee_lidar/sdk_core/include/filters/: ismoother.h  outlierfilter.h  point2d.h  smoother.h  trailingfilter.h
originbot_driver/kruisee_lidar/top/: main.cc  node.cc
originbot_driver/kruisee_lidar/top/include/: err.h  node.h
originbot_driver/qpOASES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt
originbot_driver/vp100_ros2/: CMakeLists.txt
originbot_driver/vp100_ros2/launch/: vp100.rviz  vp100_launch.py  vp100_launch_view.py
originbot_driver/vp100_ros2/params/: vp100.yaml
originbot_driver/vp100_ros2/sdk/src/impl/include/: myconsole.hpp  mystring.hpp  mytimer.hpp
originbot_driver/vp100_ros2/sdk/src/nvilidar/: nvilidar_driver_serialport.cpp
originbot_driver/vp100_ros2/src/: vp100_ros2_node.cpp
originbot_driver/ydlidar_ros2_driver/: CMakeLists.txt
originbot_example/originbot_autonomous/: CMakeLists.txt
originbot_example/originbot_get_jpg/: CMakeLists.txt  README.md  package.xml
originbot_example/originbot_qrcode_detect/: CMakeLists.txt  package.xml
originbot_example/originbot_qrcode_detect/launch/: qrcode_control.launch.py
originbot_example/originbot_qrcode_detect/src/: qr_decoder.cpp  qrcode_control.cpp
originbot_example/originbot_teleop/: CMakeLists.txt
originbot_example/originbot_vlpr/: package.xml  setup.cfg  setup.py
originbot_example/send_goal/: CMakeLists.txt
originbot_example/utils/: CMakeLists.txt  package.xml
originbot_gazebo/: package.xml  setup.py
originbot_gazebo/launch/: display_rviz.launch.py  originbot_gazebo.launch.py
originbot_gazebo/urdf/: base_gazebo.xacro  lidar_gazebo.xacro
originbot_gesture_control/: CMakeLists.txt  README.md  package.xml
originbot_gesture_control/launch/: originbot_gesture_control.launch.py
originbot_gesture_control/src/: gesture_control_engine.cpp
originbot_linefollower/: package.xml  setup.cfg  setup.py
originbot_linefollower/originbot_linefollower/: follower.py
originbot_msgs/: CMakeLists.txt  package.xml
originbot_msgs/msg/: OriginbotStatus.msg
originbot_navigation/: CMakeLists.txt  README.md  package.xml
originbot_navigation/Purepursuit/: temp.cpp
originbot_navigation/config/: lds_2d.lua  odom_ekf.yaml
originbot_navigation/launch/: cartographer.launch.py  ekf.md  gmapping.launch.py  nav_bringup.launch.py  odom_ekf.launch.py  slam_async.launch.py  slam_sync.launch.py
originbot_navigation/maps/: my_map.pgm  my_map.yaml
originbot_navigation/param/: originbot_nav2.yaml
originbot_slam/: CMakeLists.txt  README.md  package.xml
originbot_slam/launch/: originbot_slam.launch.py
ydlidar_ros2_driver/launch/: ydlidar_launch.py
ydlidar_ros2_driver/params/: ydlidar.yaml
(+95 files in other folders)
