<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>kruisee_lidar</name>
    <version>1.0.0</version>
    <description>kruisee lidar node</description>
    <maintainer email="jianping.ma@ecovacs.com">The kruisee lidar sdk authors</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- <build_depend>sensor_msgs</build_depend> -->
    <!-- <build_depend>rclcpp</build_depend> -->

    <!-- <exec_depend>sensor_msgs</exec_depend> -->
    <!-- <exec_depend>std_msgs</exec_depend> -->

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>

</package>

